# mcli

./: manage.py  mat-view-cli.py  pyproject.toml  setup.py
cli/engine/: inspect.py  render_model.py  render_view.py
cli/engine/boilerplate/{{cookiecutter.module_name}}/: schemas.py
mat_view_cli/engine/: inspect.py  render_model.py
mat_view_cli/engine/boilerplate/: cookiecutter.json
mat_view_cli/engine/boilerplate/{{cookiecutter.module_name}}/: db.py
mcli/: __init__.py  __main__.py
mcli/engine/: inspect.py  manage_mvc.py  manage_view.py  models.py  render_model.py  render_view.py  types.py  utils.py
mcli/engine/boilerplate/: cookiecutter.json
mcli/engine/boilerplate/{{cookiecutter.module_name}}/: api.py  db.py  schemas.py
mcli/engine/boilerplate_multiply/: cookiecutter.json
mcli/engine/boilerplate_multiply/{{cookiecutter.module_name}}/: api.py  schemas.py
mcli/engine/boilerplate_mvc/: cookiecutter.json
mcli/engine/boilerplate_mvc/{{cookiecutter.module_name}}/: aggregators.py  api.py  api_models.py  controller.py  models.py
mcli/engine/interfaces/: aggregators.py  api_models.py  controller.py
