[tool.poetry]
name = "mcli"
version = "0.1.0"
description = ""
authors = ["Artur Aliiev <artur.aliiev@magnise.com.ua>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.35"
sqlmodel = "^0.0.6"
psycopg2 = "^2.9.3"
pyfiglet = "^0.8.post1"
cookiecutter = "^1.7.3"
python-fire = "^0.1.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
