[tool.poetry]
name = "mcli"
version = "0.2.6"
description = ""
authors = ["Artur Aliiev <artur.aliiev@magnise.com.ua>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.35"
sqlmodel = "^0.0.6"
psycopg2 = "^2.9.3"
cookiecutter = "^1.7.3"
click = "^8.1.2"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
