[tool.poetry]
name = "mcli"
version = "1.0"
description = ""
authors = ["Artur Aliiev <artur.aliiev@magnise.com.ua>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.35"
sqlmodel = "^0.0.6"
psycopg2 = "^2.9.3"
cookiecutter = "^1.7.3"
click = "^8.1.2"
fastapi = "^0.75.1"
mongosql = { git = "https://github.com/kolypto/py-mongosql.git", branch = "sqlalchemy-1.4-compatibility" }
fastapi-async-sqlalchemy = "0.3.11"
fastapi-utils = "0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
